--- a/templates/base.html
+++ b/templates/base.html
@@ -20,19 +20,51 @@
 </head>
 
 <body>
-    <h1>MOTION PAINTER</h1>
-    {% block content %}
-    {% endblock %}
+    <header>
+        <!--Navbar-->
+        <nav class="nav-extended text-shadow grey darken-3">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('home') }}" class="brand-logo"><img
+                        src="{{ url_for('static', filename='images/motion_painter.png') }}" alt="Motion Painter logo.">
+                </a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger left"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
+                    <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Add Review</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#">Log Out</a></li>
+                    <li><a href="#">Register</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!--Mobile SideNav-->
+        <ul class="sidenav" id="mobile-demo">
+            <li>
+                <img src="{{ url_for('static', filename='images/side_motion.png') }}" alt="Motion Painter logo.">
+            </li>
+            <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
+            <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Add Review</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Register</a></li>
+        </ul>
+        {% block content %}
+        {% endblock %}
 
 
-    <!--JQuerry and Materialize JS-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!--Local JS-->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {% block scripts %}
-    {% endblock %}
+        <!--jQuery and Materialize JS-->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!--Local JS-->
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        {% block scripts %}
+        {% endblock %}
 </body>
 
 </html>
