--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                     <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a href="#">Add Review</a></li>
-                    <li><a href="#">Log In</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
                 </ul>
@@ -50,9 +50,9 @@
             <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Add Review</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
     </header>
 
