--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Register</h3>
-
+<h3 class="center-align">Log In</h3>
 
 <div class="row">
-    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
         <div class="card-panel">
-            <!-- Username -->
+            <!-- username -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user-plus prefix indigo-text lighten-1"></i>
+                    <i class="fas fa-user-cog prefix indigo-text lighten-1"></i>
                     <input id="username" name="username" type="text" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                     <label for="username">Username</label>
                 </div>
             </div>
-            <!-- Password -->
+            <!-- passowrd -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-lock prefix indigo-text lighten-1"></i>
@@ -25,10 +24,10 @@
                     <label for="password">Password</label>
                 </div>
             </div>
-            <!-- Register -->
+            <!-- login -->
             <div class="row">
                 <button type="submit" class="col s12 btn-large indigo lighten-1 text-shadow">
-                    Register <i class="fas fa-sign-in-alt"></i>
+                    Log In <i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
         </div>
@@ -38,11 +37,10 @@
 <div class="row">
     <div class="col s12">
         <p class="center-align">
-            Already Registered?
-            <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
+            New Here?
+            <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Register Account</a>
         </p>
     </div>
 </div>
-
 
 {% endblock %}
