Added session user profile

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
                     <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="#">Add Review</a></li>
                     <li><a href="{{ url_for('login') }}">Log In</a></li>
                     <li><a href="#">Log Out</a></li>
@@ -48,7 +48,7 @@
             </li>
             <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
             <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="#">Add Review</a></li>
             <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
