--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,10 @@
     padding-top: 10px;
     padding-left: 20px;
 }
+
+.text-shadow {
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
 /* Registration flash message fade effect --------------------------------- */
 
 .flash-message {
