--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                     {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
-                    <li><a href="#">Add Review</a></li>
+                    <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
