Allow user to submit reviews on db, adjusted add review template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,3 +51,7 @@
 
   /* -------------------------------------------------------------------*/
 
+  .collapsible li .userfloat p {
+    font: 80px;
+  }
+
