--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Add Task</h3>
+<h3 class="indigo-text lighten-1 center-align">Add Review</h3>
 
 <div class="row card-panel grey lighten-5">
-    <form class="col s12" method="POST" action="">
+    <form class="col s12" method="POST" action="{{ url_for('add_review') }}">
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-ticket-alt prefix indigo-text lighten-1"></i>
@@ -20,25 +20,31 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-film prefix indigo-text lighten-1"></i>
-                <input id="task_name" name="task_name" minlength="5" maxlength="50" type="text" class="validate"
+                <input id="movie_name" name="movie_name" minlength="1" maxlength="50" type="text" class="validate"
                     required>
-                <label for="task_name">Movie Name</label>
+                <label for="movie_name">Movie Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-align-left prefix indigo-text lighten-1"></i>
-                <textarea id="task_description" name="task_description" minlength="5" maxlength="200"
+                <textarea id="movie_description" name="movie_description" minlength="5" maxlength="3000"
                     class="materialize-textarea validate" required></textarea>
-                <label for="task_description">Your Critique</label>
+                <label for="movie_description">Your Critique</label>
             </div>
         </div>
-        <!--Rating-->
-        <div>
-
+        <!--Submit-->
+        <div class="row">
+            <div class="col s12 center-align">
+                <button type="submit" class="btn-large indigo lighten-1 text-shadow">
+                    Add Review <i class="fas fa-file-import right"></i>
+                </button>
+            </div>
         </div>
-
     </form>
+</div>
+
+</form>
 </div>
 
 {% endblock %}
