--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h3 class="indigo-text lighten-1 center-align">User Reviews</h3>
+
 <ul class="collapsible">
     {% for review in reviews %}
     <li>
         <div class="collapsible-header white-text black text-shadow">
             <i class="fas fa-caret-down"></i>
             <strong>{{ review.movie_name }}</strong> : {{ review.genre_name }}
+            <p id="userfloat"><em>by: {{
+                    review.created_by }}</em>
+            </p>
         </div>
         <div class="collapsible-body">
-            <strong>{{ review.genre_name }}</strong>
             <p>{{ review.movie_description }}</p>
         </div>
     </li>
