Created edit and remove buttons, wired edit button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,7 +51,19 @@
 
   /* -------------------------------------------------------------------*/
 
-  .collapsible li .userfloat p {
-    font: 80px;
-  }
+
+
+.btn-small {
+  margin: 5px;
+}
+
+.collapsible-header .col strong {
+  margin: 5px;
+  line-height: 42px;
+}
+
+.collapsible-header .col em {
+  padding-left: 100px;
+
+}
 
