--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -7,14 +7,18 @@
     {% for review in reviews %}
     <li>
         <div class="collapsible-header white-text black text-shadow">
-            <i class="fas fa-caret-down"></i>
-            <strong>{{ review.movie_name }}</strong> : {{ review.genre_name }}
-            <p id="userfloat"><em>by: {{
-                    review.created_by }}</em>
-            </p>
+            <div class="col s3">
+                <i class="fas fa-caret-down"></i>
+                <a href="" class="btn-small indigo lighten-1">Remove</a>
+                <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn-small red accent-2">Edit</a>
+            </div>
+            <div class="col s9">
+                <strong>{{ review.movie_name }}</strong>
+            </div>
         </div>
         <div class="collapsible-body">
             <p>{{ review.movie_description }}</p>
+            <p><em>by: {{ review.created_by }}</em></p>
         </div>
     </li>
     {% endfor %}
