--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -17,6 +17,7 @@
             </div>
         </div>
         <div class="collapsible-body">
+            <strong>{{ review.genre_name }}</strong>
             <p>{{ review.movie_description }}</p>
             <p><em>by: {{ review.created_by }}</em></p>
         </div>
