Edit review all set up, updates to db

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -49,7 +49,7 @@
                 </button>
                 <!-- cancel button -->
                 <a href="{{ url_for('get_reviews') }}" class="btn-large red accent-2 text-shadow">
-                    Cancel <i class="fas fa-times-circle right"></i>
+                    Go Back <i class="fas fa-long-arrow-alt-left right"></i>
                 </a>
             </div>
         </div>
