--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -9,8 +9,10 @@
         <div class="collapsible-header white-text black text-shadow">
             <div class="col s3">
                 <i class="fas fa-caret-down"></i>
+                {% if session.user|lower == review.created_by|lower %}
                 <a href="" class="btn-small indigo lighten-1">Remove</a>
                 <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn-small red accent-2">Edit</a>
+                {% endif %}
             </div>
             <div class="col s9">
                 <strong>{{ review.movie_name }}</strong>
