--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -10,7 +10,8 @@
             <div class="col s3">
                 <i class="fas fa-caret-down"></i>
                 {% if session.user|lower == review.created_by|lower %}
-                <a href="" class="btn-small indigo lighten-1">Remove</a>
+                <a href="{{ url_for('delete_review', review_id=review._id) }}"
+                    class="btn-small indigo lighten-1">Remove</a>
                 <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn-small red accent-2">Edit</a>
                 {% endif %}
             </div>
