--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
                     <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
+                    <li><a href="{{ url_for('bucketlist') }}">Bucket List</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
@@ -54,6 +55,7 @@
             <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
             <li><a href="#">Add Review</a></li>
             <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            <li><a href="{{ url_for('bucketlist') }}">Bucket List</a></li>
             {% else %}
             <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
             <li><a href="{{ url_for('login') }}">Log In</a></li>
