--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -13,6 +13,10 @@
                 <a href="{{ url_for('delete_review', review_id=review._id) }}"
                     class="btn-small indigo lighten-1">Remove</a>
                 <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn-small red accent-2">Edit</a>
+                {% elif session.user|lower == "admin80s"|lower %}
+                <a href="{{ url_for('delete_review', review_id=review._id) }}"
+                    class="btn-small indigo lighten-1">Remove</a>
+                <a href="{{ url_for('edit_review', review_id=review._id) }}" class="btn-small red accent-2">Edit</a>
                 {% endif %}
             </div>
             <div class="col s9">
