Created necessary Bucket list templates and added functionality

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -47,7 +47,7 @@
                 <button type="submit" class="btn-large indigo lighten-1 text-shadow">
                     Edit Review <i class="fas fa-edit right"></i>
                 </button>
-                <!-- cancel button -->
+                <!--Cancel button-->
                 <a href="{{ url_for('get_reviews') }}" class="btn-large red accent-2 text-shadow">
                     Go Back <i class="fas fa-long-arrow-alt-left right"></i>
                 </a>
