--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
                     <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
-                    <li><a href="{{ url_for('add_bucketitem') }}">Update Bucket List</a></li>
-                    <li><a href="{{ url_for('bucketlist') }}">Bucket List</a></li>
+                    <li><a href="{{ url_for('add_bucketlist') }}">Update Bucket List</a></li>
+                    <li><a href="{{ url_for('get_bucketlists') }}">Bucket List</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                     {% else %}
                     <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
@@ -54,9 +54,10 @@
             {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="{{ url_for('get_reviews') }}">Reviews</a></li>
-            <li><a href="#">Add Review</a></li>
+            <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
+            <li><a href="{{ url_for('add_bucketlist') }}">Update Bucket List</a></li>
+            <li><a href="{{ url_for('get_bucketlists') }}">Bucket List</a></li>
             <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-            <li><a href="{{ url_for('bucketlist') }}">Bucket List</a></li>
             {% else %}
             <li><a href="{{ url_for('recommend') }}">Recommendations</a></li>
             <li><a href="{{ url_for('login') }}">Log In</a></li>
