--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Welcome</h1>
 
 
-{% endblock %}
+<h1 class="indigo-text lighten-1 center-align">Welcome</h1>
+<h4 class="center-align">Join the community of movie lovers where you can explore other members movie reviews. Add your
+    own or set up your bucket list.</h2>
+
+
+
+    {% endblock %}
