--- a/templates/add_bucketlist.html
+++ b/templates/add_bucketlist.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Add Movie To Bucketlist</h3>
+<h3 class="indigo-text lighten-1 center-align">Add Movie To Bucketlist</h3>
 
 <div class="row card-panel grey lighten-5">
     <form class="col s12" method="POST" action="{{ url_for('add_bucketlist') }}">
