--- a/templates/bucketlists.html
+++ b/templates/bucketlists.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align">Your Bucket List</h3>
+<h3 class="indigo-text lighten-1 center-align">Your Bucket List</h3>
 
 <div class="row">
     <div class="col s12 center-align">
@@ -14,7 +14,7 @@
 <div class="row">
     {% for bucketlist in bucketlists %}
     <div class="col s12 m3">
-        <div class="card black darken-4 text-shadow center-align">
+        <div class="card grey darken-3 text-shadow center-align">
             <div class="card-content white-text">
                 <span class="card-title">{{ bucketlist.bucketlist_name }}</span>
             </div>
