--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -6,7 +6,7 @@
 <ul class="collapsible">
     {% for review in reviews %}
     <li>
-        <div class="collapsible-header white-text black text-shadow">
+        <div class="collapsible-header white-text grey darken-3 text-shadow">
             <div class="col s3">
                 <i class="fas fa-caret-down"></i>
                 {% if session.user|lower == review.created_by|lower %}
@@ -23,11 +23,13 @@
         </div>
         <div class="collapsible-body">
             <strong>{{ review.genre_name }}</strong>
+            <p><strong>Grade: {{ review.grade_name }}/5</strong></p>
             <p>{{ review.movie_description }}</p>
             <p><em>by: {{ review.created_by }}</em></p>
         </div>
     </li>
     {% endfor %}
+
 </ul>
 
 {% endblock %}
