--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
                     <i class="fas fa-user-plus prefix indigo-text lighten-1"></i>
                     <input id="username" name="username" type="text" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                    <label for="username">Username</label>
+                    <label for="username">Username (Minimum 5 letters or numbers)</label>
                 </div>
             </div>
             <!-- Password -->
@@ -22,7 +22,7 @@
                     <i class="fas fa-user-lock prefix indigo-text lighten-1"></i>
                     <input id="password" name="password" type="password" minlength="5" maxlength="15"
                         pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                    <label for="password">Password</label>
+                    <label for="password">Password (Minimum 5 letters or numbers)</label>
                 </div>
             </div>
             <!-- Register -->
